@@ -1801,7 +1801,8 @@ spc_handler_pdfm_mapline (struct spc_env *spe, struct spc_arg *ap)
   char        *map_name, opchr;
   int          error = 0;
   static char  buffer[1024];
-  char        *p, *q;
+  const char  *p;
+  char        *q;
 
   skip_white(&ap->curptr, ap->endptr);
   if (ap->curptr >= ap->endptr) {
@@ -1826,25 +1827,8 @@ spc_handler_pdfm_mapline (struct spc_env *spe, struct spc_arg *ap)
       error = -1;
     }
     break;
-  case  '+':
-    p = (char *)ap->curptr;
-    q = buffer;
-    while (p < ap->endptr)
-      *q++ = *p++;
-    *q = '\0';
-    mrec  = NEW(1, fontmap_rec);
-    pdf_init_fontmap_record(mrec);
-    error = pdf_read_fontmap_line(mrec, buffer, (long) (ap->endptr - ap->curptr), is_pdfm_mapline(buffer));
-    if (error)
-      spc_warn(spe, "Invalid fontmap line.");
-    else {
-      pdf_append_fontmap_record(mrec->map_name, mrec);
-    }
-    pdf_clear_fontmap_record(mrec);
-    RELEASE(mrec);
-    break;
   default:
-    p = (char *)ap->curptr;
+    p = ap->curptr;
     q = buffer;
     while (p < ap->endptr)
       *q++ = *p++;
@@ -1854,9 +1838,10 @@ spc_handler_pdfm_mapline (struct spc_env *spe, struct spc_arg *ap)
     error = pdf_read_fontmap_line(mrec, buffer, (long) (ap->endptr - ap->curptr), is_pdfm_mapline(buffer));
     if (error)
       spc_warn(spe, "Invalid fontmap line.");
-    else {
+    else if (opchr == '+')
+      pdf_append_fontmap_record(mrec->map_name, mrec);
+    else
       pdf_insert_fontmap_record(mrec->map_name, mrec);
-    }
     pdf_clear_fontmap_record(mrec);
     RELEASE(mrec);
     break;
